# middleware/authenticate.js
@@ -1,0 +1,8 @@
+const isAuthenticated = (req, res, next) => {
+    if (!req.isAuthenticated || !req.isAuthenticated()) {
+        return res.status(401).json({ error: "Unauthorized access" });
+    }
+    next();
+};
+
+module.exports = isAuthenticated;
